Added additional annotations to the endpoints in the controller to improve swagger documentation
