# src/FoodTruck.Web/Controllers/FoodTrucksController.cs
@@ -1,8 +1,11 @@
 ﻿using System;
+using System.Collections.Generic;
 using System.Linq;
 using FoodTruck.Core.Interfaces;
+using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
+using Swashbuckle.AspNetCore.Annotations;
 
 namespace FoodTruck.Web.Controllers
 {
@@ -20,6 +23,12 @@ namespace FoodTruck.Web.Controllers
         }
 
         [HttpGet("closest/{latitude}/{longitude}")]
+        [Produces("application/json")]
+        [ProducesResponseType(StatusCodes.Status200OK)]
+        [ProducesResponseType(StatusCodes.Status400BadRequest)]
+        [ProducesResponseType(StatusCodes.Status204NoContent)]
+        [SwaggerOperation("GetClosestFoodTruck", "Returns the closest food truck within a 100 mile radius based on the given geographic coordinates")]
+        [SwaggerResponse(StatusCodes.Status200OK, "Success", type: typeof(Core.Models.FoodTruck))]
         public IActionResult GetClosestFoodTruck(double latitude, double longitude)
         {
             try
@@ -39,6 +48,12 @@ namespace FoodTruck.Web.Controllers
 
 
         [HttpGet("closest/{latitude}/{longitude}/{milesRadius}")]
+        [Produces("application/json")]
+        [ProducesResponseType(StatusCodes.Status200OK)]
+        [ProducesResponseType(StatusCodes.Status400BadRequest)]
+        [ProducesResponseType(StatusCodes.Status204NoContent)]
+        [SwaggerOperation("GetClosestFoodTruck", "Returns a collection of the closest foodtrucks within the given radius for the given geographic coordinates")]
+        [SwaggerResponse(StatusCodes.Status200OK, "Success", type: typeof(List<Core.Models.FoodTruck>))]
         public IActionResult GetClosestFoodTrucks(double latitude, double longitude, int milesRadius)
         {
             try
